{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 90,
  "lineage": "9a187e05-e51e-f6fc-dc7b-fd15bb37bf83",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "RATE",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/terraform-project-shrirang/zones/us-central1-a/networkEndpointGroups/gke-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 50,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-02-12T03:39:58.937-08:00",
            "enable_cdn": false,
            "fingerprint": "7ejSaxLAozM=",
            "generated_id": 7341981192406775393,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/terraform-project-shrirang/global/healthChecks/gke-health-check"
            ],
            "id": "projects/terraform-project-shrirang/global/backendServices/my-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "my-backend-service",
            "port_name": "http",
            "project": "terraform-project-shrirang",
            "protocol": "HTTPS",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-shrirang/global/backendServices/my-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.alb.google_compute_health_check.default",
            "module.alb.google_compute_network_endpoint_group.gke_neg",
            "module.networking.google_compute_network.vpc",
            "module.networking.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.107.252.128",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-02-12T02:03:17.218-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/terraform-project-shrirang/global/addresses/lb-static-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "lb-static-ip",
            "prefix_length": 0,
            "project": "terraform-project-shrirang",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-shrirang/global/addresses/lb-static-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "forwarding_rule_id": 8289535429846316603,
            "id": "projects/terraform-project-shrirang/global/forwardingRules/lb-forwarding-rule",
            "ip_address": "34.107.252.128",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "lb-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "terraform-project-shrirang",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-shrirang/global/forwardingRules/lb-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/terraform-project-shrirang/global/targetHttpProxies/lb-target-http-proxy"
          },
          "dependencies": [
            "module.alb.google_compute_backend_service.default",
            "module.alb.google_compute_global_address.lb_ip",
            "module.alb.google_compute_health_check.default",
            "module.alb.google_compute_network_endpoint_group.gke_neg",
            "module.alb.google_compute_target_http_proxy.default",
            "module.alb.google_compute_url_map.default",
            "module.networking.google_compute_network.vpc",
            "module.networking.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-02-12T03:40:55.594-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/terraform-project-shrirang/global/targetHttpProxies/lb-target-http-proxy",
            "name": "lb-target-http-proxy",
            "project": "terraform-project-shrirang",
            "proxy_bind": false,
            "proxy_id": 3327323815993751080,
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-shrirang/global/targetHttpProxies/lb-target-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/terraform-project-shrirang/global/urlMaps/lb-url-map"
          },
          "dependencies": [
            "module.alb.google_compute_backend_service.default",
            "module.alb.google_compute_health_check.default",
            "module.alb.google_compute_network_endpoint_group.gke_neg",
            "module.alb.google_compute_url_map.default",
            "module.networking.google_compute_network.vpc",
            "module.networking.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-02-12T03:40:42.851-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/terraform-project-shrirang/global/backendServices/my-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "CEIdrErGua4=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/terraform-project-shrirang/global/urlMaps/lb-url-map",
            "map_id": 1784943391474267733,
            "name": "lb-url-map",
            "path_matcher": [],
            "project": "terraform-project-shrirang",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-shrirang/global/urlMaps/lb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.google_compute_backend_service.default",
            "module.alb.google_compute_health_check.default",
            "module.alb.google_compute_network_endpoint_group.gke_neg",
            "module.networking.google_compute_network.vpc",
            "module.networking.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-project-shrirang/global/networks/my-vpc",
            "mtu": 0,
            "name": "my-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "6818961768979746570",
            "numeric_id": "6818961768979746570",
            "project": "terraform-project-shrirang",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-shrirang/global/networks/my-vpc"
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-02-12T02:03:40.972-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/terraform-project-shrirang/regions/us-central1/subnetworks/my-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "my-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-project-shrirang/global/networks/my-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-project-shrirang",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.44.0.0/14",
                "range_name": "gke-my-gke-cluster-pods-aed40277",
                "reserved_internal_range": "https://networkconnectivity.googleapis.com/v1/projects/terraform-project-shrirang/locations/global/internalRanges/gke-my-gke-cluster-pods-aed40277"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-shrirang/regions/us-central1/subnetworks/my-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 7572268220602765075
          },
          "dependencies": [
            "module.networking.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-02-12T02:03:17.363-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-project-shrirang/global/firewalls/allow-all",
            "log_config": [],
            "name": "allow-all",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-project-shrirang/global/networks/default",
            "priority": 65535,
            "project": "terraform-project-shrirang",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-shrirang/global/firewalls/allow-all",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny_specific_ips",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2025-02-12T02:43:24.140-08:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-project-shrirang/global/firewalls/deny-specific-ips",
            "log_config": [],
            "name": "deny-specific-ips",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-project-shrirang/global/networks/my-vpc",
            "priority": 1000,
            "project": "terraform-project-shrirang",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-shrirang/global/firewalls/deny-specific-ips",
            "source_ranges": [
              "203.0.113.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}